What's with that font size bug on small screens?!

--- a/style_bundles/icon_tiles.css
+++ b/style_bundles/icon_tiles.css
@@ -43,7 +43,7 @@
         color: black;
     }
 
-    .tile:hover {
+    .tile:hover, .tile.selected {
         border: 1px solid black;
     }
 
